// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Image Image default 1`] = `
<bolt-image placeholder-color="hsl(233, 33%, 97%)"
            placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
            src="/fixtures/1200x660.jpg"
            alt="A Rock Climber"
            srcset="/fixtures/1200x660.jpg"
>
  <img class="c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade c-bolt-image__lazyload--blur js-lazyload"
       alt="A Rock Climber"
       data-srcset="/fixtures/1200x660.jpg"
       data-sizes="auto"
       srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
       src="/fixtures/1200x660.jpg"
  >
  <noscript>
    <img class="c-bolt-image__image"
         alt="A Rock Climber"
         src="/fixtures/1200x660.jpg"
         srcset="/fixtures/1200x660.jpg"
    >
  </noscript>
</bolt-image>
`;

exports[`Bolt Image Props Image ratio object and lazyload:false compiles 1`] = `
<bolt-image no-lazy
            placeholder-color="hsl(233, 33%, 97%)"
            placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
            src="/fixtures/1200x660.jpg"
            alt="A Rock Climber"
            srcset="/fixtures/1200x660.jpg"
>
  <img class="c-bolt-image__image"
       alt="A Rock Climber"
       srcset="/fixtures/1200x660.jpg"
       sizes="auto"
       src="/fixtures/1200x660.jpg"
  >
</bolt-image>
`;

exports[`Bolt Image Props Image ratio object and lazyload:true compiles 1`] = `
<bolt-image placeholder-color="hsl(233, 33%, 97%)"
            placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
            src="/fixtures/1200x660.jpg"
            alt="A Rock Climber"
            srcset="/fixtures/1200x660.jpg"
>
  <img class="c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade c-bolt-image__lazyload--blur js-lazyload"
       alt="A Rock Climber"
       data-srcset="/fixtures/1200x660.jpg"
       data-sizes="auto"
       srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
       src="/fixtures/1200x660.jpg"
  >
  <noscript>
    <img class="c-bolt-image__image"
         alt="A Rock Climber"
         src="/fixtures/1200x660.jpg"
         srcset="/fixtures/1200x660.jpg"
    >
  </noscript>
</bolt-image>
`;

exports[`Bolt Image Props Image should always render alt attribute on <img> tags 1`] = `
<bolt-image placeholder-color="hsl(233, 33%, 97%)"
            placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
            src="/fixtures/1200x660.jpg"
            alt
            srcset="/fixtures/1200x660.jpg"
>
  <img class="c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade c-bolt-image__lazyload--blur js-lazyload"
       alt
       data-srcset="/fixtures/1200x660.jpg"
       data-sizes="auto"
       srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
       src="/fixtures/1200x660.jpg"
  >
  <noscript>
    <img class="c-bolt-image__image"
         alt
         src="/fixtures/1200x660.jpg"
         srcset="/fixtures/1200x660.jpg"
    >
  </noscript>
</bolt-image>
`;

exports[`Bolt Image Props Image should always render alt attribute on <img> tags 2`] = `
<bolt-image placeholder-color="hsl(233, 33%, 97%)"
            placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
            src="/fixtures/1200x660.jpg"
            srcset="/fixtures/1200x660.jpg"
>
  <img class="c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade c-bolt-image__lazyload--blur js-lazyload"
       alt
       data-srcset="/fixtures/1200x660.jpg"
       data-sizes="auto"
       srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
       src="/fixtures/1200x660.jpg"
  >
  <noscript>
    <img class="c-bolt-image__image"
         alt
         src="/fixtures/1200x660.jpg"
         srcset="/fixtures/1200x660.jpg"
    >
  </noscript>
</bolt-image>
`;

exports[`Bolt Image Props Image with max-width and additional style attribute renders as expected 1`] = `
<bolt-image placeholder-color="hsl(233, 33%, 97%)"
            placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
            style="display: block;width: 200px; max-width: 100%;"
            src="/fixtures/1200x660.jpg"
            alt="A Rock Climber"
            srcset="/fixtures/1200x660.jpg"
            max-width="200px"
>
  <img class="c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade c-bolt-image__lazyload--blur js-lazyload"
       alt="A Rock Climber"
       data-srcset="/fixtures/1200x660.jpg"
       data-sizes="auto"
       srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
       src="/fixtures/1200x660.jpg"
  >
  <noscript>
    <img class="c-bolt-image__image"
         alt="A Rock Climber"
         src="/fixtures/1200x660.jpg"
         srcset="/fixtures/1200x660.jpg"
    >
  </noscript>
</bolt-image>
`;

exports[`Bolt Image Props Image with max-width of 50% renders as expected 1`] = `
<bolt-image placeholder-color="hsl(233, 33%, 97%)"
            placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
            style="width: 50%;"
            src="/fixtures/1200x660.jpg"
            alt="A Rock Climber"
            srcset="/fixtures/1200x660.jpg"
            max-width="50%"
>
  <img class="c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade c-bolt-image__lazyload--blur js-lazyload"
       alt="A Rock Climber"
       data-srcset="/fixtures/1200x660.jpg"
       data-sizes="auto"
       srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
       src="/fixtures/1200x660.jpg"
  >
  <noscript>
    <img class="c-bolt-image__image"
         alt="A Rock Climber"
         src="/fixtures/1200x660.jpg"
         srcset="/fixtures/1200x660.jpg"
    >
  </noscript>
</bolt-image>
`;

exports[`Bolt Image Props Image with max-width of 200px renders as expected 1`] = `
<bolt-image placeholder-color="hsl(233, 33%, 97%)"
            placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
            style="width: 200px; max-width: 100%;"
            src="/fixtures/1200x660.jpg"
            alt="A Rock Climber"
            srcset="/fixtures/1200x660.jpg"
            max-width="200px"
>
  <img class="c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade c-bolt-image__lazyload--blur js-lazyload"
       alt="A Rock Climber"
       data-srcset="/fixtures/1200x660.jpg"
       data-sizes="auto"
       srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
       src="/fixtures/1200x660.jpg"
  >
  <noscript>
    <img class="c-bolt-image__image"
         alt="A Rock Climber"
         src="/fixtures/1200x660.jpg"
         srcset="/fixtures/1200x660.jpg"
    >
  </noscript>
</bolt-image>
`;
